create boat component, draw it

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <head>
+  <script type="text/javascript" src="lib/prototype-1.6.0.2.js"></script>
+  <script type="text/javascript" src="lib/excanvas.js"></script>
+  <script type="text/javascript" src="lib/excanvas-compressed.js"></script>
   <script type="text/javascript" src="lib/crafty.js"></script>
+  <script type="text/javascript" src="lib/box2d.js"></script>
   <script type="text/javascript" src="src/game.js"></script>
   <title>My Crafty Game</title>
   <style>
